--- a/css/style.css
+++ b/css/style.css
@@ -119,13 +119,13 @@
     padding: 1.8rem 0rem;
     margin: .9rem 0;
     width: 180px;
-    height: 100px;
+    /* height: 100px; */
     cursor: pointer;
     transition: transform .4s ease;
 }
 
 .site-main .brand-area .first-row .col-lg-4 > .single-brand > img{
-    width: 70%;
+    width: 90%;
 }
 
 .site-main .brand-area .first-row .col-lg-4 > .single-brand:hover{
